# FV-pruebas

./: Autoevalucion.txt  CMakeLists.txt  Comandos GIT.md  Elcoli.cpp  LEEME(ByVermia).txt  MapaFinal.tmx  Plataforma.cpp  Plataforma.h  README.md  acciones.cpp  caer.cpp  disparar.cpp  enemCentil.cpp  enemMurcielago.cpp  enemRep.cpp  main.cpp  mapa.cpp  mapa.h  mapaObjeto.cpp  mapaObjeto.h  matarpersonaje.cpp  menu.cpp  menu.h  recoger.cpp  sonido.cpp  sonido.h
Animacion/: Animacion.cpp  Animacion.h  Motor.cpp  Motor.h
Bullet/: Bullet.cc  Bullet.h  CMakeLists.txt
Collider/: CMakeLists.txt  Collider.cpp  Collider.h
Juego/: Juego.cpp  Juego.h
Mundo/: CMakeLists.txt  Mundo.cc  Mundo.h
Objeto/: Objeto.cpp  Objeto.h
Plataforma/: CMakeLists.txt  Plataforma.cpp  Plataforma.h
Player/: CMakeLists.txt  Player.cc  Player.h
ej_modulos/: CMakeLists.txt  centinela.cpp  centinela.h  murcielago.cpp  murcielago.h
enemigos/: CMakeLists.txt  centinela.cpp  centinela.h  enemigo.cpp  enemigo.h  murcielago.cpp  murcielago.h  reptante.cpp  reptante.h
